# solana_scholarship_dao

./: README.md  README.zh-CN.md  codama.json  package-lock.json  package.json  pnpm-lock.yaml
anchor/: Anchor.toml
anchor/programs/scholarship_dao/: Cargo.toml
anchor/programs/scholarship_dao/src/: lib.rs  tests.rs
app/: globals.css  layout.tsx  page.tsx
app/api/ipfs-upload/: route.ts
app/components/: aurora-background.tsx  providers.tsx
app/components/charts/: status-donut.tsx  treasury-timeline.tsx  vote-bar.tsx
app/components/dao/: activity-feed.tsx  create-dao-card.tsx  dao-avatar.tsx  dao-card.tsx  donate-panel.tsx  donor-leaderboard.tsx  proof-materials.tsx  proposal-row.tsx
app/components/layout/: dao-header.tsx  dao-tab-bar.tsx  keyboard-shortcuts.tsx  site-header.tsx  workspace-shell.tsx
app/components/ui/: empty-state.tsx  skeleton.tsx
app/dao/[address]/: layout.tsx  overview-tab.tsx  page.tsx
app/dao/[address]/activity/: activity-tab.tsx  page.tsx
app/dao/[address]/members/: members-tab.tsx  page.tsx
app/dao/[address]/proposals/: page.tsx  proposals-tab.tsx
app/dao/[address]/proposals/[id]/: page.tsx  proposal-detail.tsx
app/dao/[address]/proposals/new/: page.tsx  (+1 more)
app/dao/[address]/settings/: page.tsx  settings-tab.tsx
app/dao/[address]/treasury/: page.tsx  treasury-tab.tsx
app/lib/: errors.ts  ipfs.ts
app/lib/dao/: pdas.ts  program.ts  proposal-status.ts  strings.ts  utils.ts
app/lib/hooks/: use-activity.ts  use-dao.ts  use-daos.ts  use-members.ts  use-treasury-history.ts
app/me/: me-dashboard.tsx  page.tsx
