[package]
name = "scholarship_dao"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scholarship_dao"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
